feat(app): ✨ Add gambling

--- a/GuiApp/kv/headerBodyLayout.kv
+++ b/GuiApp/kv/headerBodyLayout.kv
@@ -48,6 +48,7 @@
             size_hint: None, 1
             width: self.height*2
             BoxLayoutButton:
+                id: logoutButton
                 on_press: root.onLogoutButtonPressed()
                 canvas:
                     Color:
