--- a/GuiApp/kv/main.kv
+++ b/GuiApp/kv/main.kv
@@ -26,8 +26,13 @@
 #:include kv/uiElements/buttons.kv
 #:include kv/uiElements/textInputs.kv
 #:include kv/uiElements/layouts.kv
+#:include kv/uiElements/WheelOfSnacksWidget.kv
+#:include kv/uiElements/ParticleEmitter.kv
 #:include kv/editSystemSettingsScreen.kv
 #:include kv/insufficientFundsPopup.kv
 #:include kv/createUserOrLinkCardPopup.kv
 #:include kv/linkCardScreen.kv
 #:include kv/linkCardConfirmationPopup.kv
+#:include kv/wheelOfSnacksScreen.kv
+#:include kv/WinPopup.kv
+#:include kv/gambleSummaryPopup.kv
