feat(input): ✨ Added numeric keyboard and currency filter

--- a/GuiApp/kv/editSnackScreen.kv
+++ b/GuiApp/kv/editSnackScreen.kv
@@ -31,7 +31,7 @@
                 size_factor: self.parent.width / 30
                 header_text: "Price"
                 hint_text: "Enter price"
-                input_filter: "float"
+                input_filter: "currency"
     Widget: # Vertical Spacer
     GridLayout:
         rows: 1
