--- a/GuiApp/kv/editUserScreen.kv
+++ b/GuiApp/kv/editUserScreen.kv
@@ -30,7 +30,7 @@
                 size_factor: self.parent.width / 32
                 header_text: "Credits"
                 hint_text: "Enter credits"
-                input_filter: "float"
+                input_filter: "currency"
             TextInputWithHeader:
                 id: cardIdInput
                 size_factor: self.parent.width / 32
