--- a/GuiApp/kv/topUpAmountScreen.kv
+++ b/GuiApp/kv/topUpAmountScreen.kv
@@ -59,7 +59,7 @@
                 write_tab: False
                 multiline: False
                 hint_text: "0.00"
-                input_filter: "float"
+                input_filter: "currency"
                 halign: "center"
                 valign: "middle"
                 size_hint_y: None
