feat(app): ✨ Update hint text for card input and modify header text for clarity

--- a/GuiApp/kv/createUserScreen.kv
+++ b/GuiApp/kv/createUserScreen.kv
@@ -48,7 +48,7 @@
                     id: cardIdInput
                     size_factor: self.parent.width / 25
                     header_text: "Login card"
-                    hint_text: "Blipp card to register (optional)"
+                    hint_text: "Tap card to register (optional)"
                     disable_input: True
             Widget: # Horizontal Spacer
                 size_hint_x: 0.1
