--- a/GuiApp/kv/editUserScreen.kv
+++ b/GuiApp/kv/editUserScreen.kv
@@ -35,7 +35,7 @@
                 id: cardIdInput
                 size_factor: self.parent.width / 32
                 header_text: "Login card"
-                hint_text: "Blipp card to register (optional)"
+                hint_text: "Tap card to register (optional)"
                 disable_input: True
     Widget: # Vertical Spacer
     GridLayout:
