--- a/GuiApp/kv/editUsersScreen.kv
+++ b/GuiApp/kv/editUsersScreen.kv
@@ -9,7 +9,7 @@
         id: usersTable
         headerHeight: self.width / 15
         entryHeight: self.width / 15
-        columns: ["First name", "Last name", "User ID", "Total credits"]
-        columnExamples: ["LongName", "LongLastName", "23", "100.00"]
+        columns: ["First name", "Last name", "Login card", "Total credits"]
+        columnExamples: ["LongName", "LongLastName", "1231231123", "100.00"]
         onEntryPressed: root.onUserEntryPressed
 
