feat(app): ✨ Make MainUserScreen more static

--- a/GuiApp/kv/main.kv
+++ b/GuiApp/kv/main.kv
@@ -28,6 +28,7 @@
 #:include kv/uiElements/layouts.kv
 #:include kv/uiElements/WheelOfSnacksWidget.kv
 #:include kv/uiElements/ParticleEmitter.kv
+#:include kv/uiElements/navigationHeader.kv
 #:include kv/editSystemSettingsScreen.kv
 #:include kv/insufficientFundsPopup.kv
 #:include kv/createUserOrLinkCardPopup.kv
