feat(app): ✨ Add page_name property to NavigationHeader

--- a/GuiApp/kv/adminScreen.kv
+++ b/GuiApp/kv/adminScreen.kv
@@ -18,6 +18,7 @@
     NavigationHeader:
         id: header
         use_settings_button: False
+        page_name: "Admin Screen"
     GridLayout:
         canvas:
             Color:
