--- a/GuiApp/kv/mainUserScreen.kv
+++ b/GuiApp/kv/mainUserScreen.kv
@@ -24,6 +24,7 @@
     NavigationHeader:
         id: header
         use_settings_button: True
+        page_name: "Main User Screen"
     GridLayout:
         id: optionsGrid
         rows: 1
